home button added mentioned in #33, content to be added

--- a/CxGUI/CxFront/static/css/style.css
+++ b/CxGUI/CxFront/static/css/style.css
@@ -139,6 +139,11 @@ input + a {
     margin-right: 10px !important;
 }
 
+
+a.disable {
+  pointer-events: none;
+  cursor: default;
+}
 /* button[type="button"] {
     margin-left: 100px !important;
 } */
