home page added awaiting examples, fixes #33

--- a/CxGUI/CxFront/editor/templates/editor/index.html
+++ b/CxGUI/CxFront/editor/templates/editor/index.html
@@ -93,10 +93,13 @@
     </div>
     <div class="main_tabs">
         <!--  ##################################################      -->
-        <!--        This is the content of the home tab -->
+        <!--        This is the content of the home tab               -->
         <!--  ##################################################      -->
         <div class="tabs__content" data-tab="0">
             <div id='home' style="height: 100vh;">
+                <h3> CxSystem Simulator</h3>
+
+                <div style="border: solid #e1e1e1 1px; padding: 5px; width: 60%;">
                 <p>
                     CxSystem is a cerebral cortex simulation framework, which operates on personal computers.
                     We have tested the simulation software with a simplified version of a comprehensive cortical microcircuit model [1],
@@ -111,11 +114,23 @@
                 <br>
                 <br>
                 <br>
-                <p>
+                <hr>
+                <p style="font-size: 8pt;">
                     [1] Markram, H., Muller, E., Ramaswamy, S., Reimann, M. W., Abdellah, M., Sanchez, C. A., … Schürmann, F. (2015). Reconstruction and Simulation of Neocortical Microcircuitry. Cell, 163(2), 456–492. http://doi.org/10.1016/j.cell.2015.09.029
                     <br>
                     [2]Heikkinen, H., Sharifian, F., Vigário, R., & Vanni, S. (2015). Feedback to distal dendrites links fMRI signals to neural receptive fields in a spiking network model of the visual cortex. Journal of Neurophysiology, 114(1), 57–69. http://doi.org/10.1152/jn.00169.2015
                 </p>
+                </div>
+
+                <br>
+                <h3> Examples </h3>
+                <div style="border: solid #e1e1e1 1px; padding: 5px;width: 60%;">
+                <p>
+                The following examples are currently available for simulation:
+
+                </p>
+                </div>
+
             </div>
         </div>
 
