--- a/CxGUI/CxFront/editor/templates/editor/index.html
+++ b/CxGUI/CxFront/editor/templates/editor/index.html
@@ -15,7 +15,7 @@
 <script src="/static/scripts/jquery-3.4.1.min.js"></script>
 <script src="/static/scripts/schema.js"></script>
 <script src="/static/scripts/django_simulation_request.js"></script>
-<script src="/static/css/foundation-5.5.3/js/foundation.min.js"></script>
+<!--<script src="/static/css/foundation-5.5.3/js/foundation.min.js"></script>-->
 
 <script>
     // Set the default CSS theme and icon library globally
@@ -37,33 +37,34 @@
     <section class="top-bar-section">
         <ul class="left">
 
-            <li class="active" ><a href="#" onclick="document.getElementById('home-button').click();">Home</a></li>
+            <li class="active"><a href="#" onclick="document.getElementById('home-button').click();">Home</a></li>
 
-            <li  class="active" data-step="1" data-intro="Use this button to import anatomy and physiology configuration files"><a href="javascript:void(0);" onclick="document.getElementById('file-input').click()">Import
+            <li class="active" data-step="1"
+                data-intro="Use this button to import anatomy and physiology configuration files"><a
+                    href="javascript:void(0);" onclick="document.getElementById('file-input').click()">Import
                 Parameters/Physiology</a></li>
-<!--            <li class="active"><a href="javascript:void(0);" onclick="document.getElementById('file-input').click()">Import-->
-<!--                Physiology</a></li>-->
 
             <li class="active"><a href="javascript:void(0);" onclick="downloadanatomy()"
                                   data-step="2"
-                                  data-intro="When you are done changing the anatomy configuration file, use this button to download your changed configuration file.">Export Parameters</a></li>
+                                  data-intro="When you are done changing the anatomy configuration file, use this button to download your changed configuration file.">Export
+                Parameters</a></li>
             <li class="active"><a href="javascript:void(0);" onclick="downloadphysiology()"
                                   data-step="3"
-                                  data-intro="When you are done changing the physiology configuration file, use this button to download your changed configuration file.">Export Physiology</a></li>
+                                  data-intro="When you are done changing the physiology configuration file, use this button to download your changed configuration file.">Export
+                Physiology</a></li>
             <li class="active"><a href="javascript:void(0);" onclick="javascript:introJs().start();">Help</a></li>
         </ul>
         <ul class="right">
-            <form action='simulate'>
+            <form id='simulation_form' action='simulate'>
                 {% csrf_token %}
-                <a class="button alert" href="javascript:void(0);" onclick="document.getElementById('simulator').click()"
-                                    data-step="4"
-                                    data-intro="Use this button to initiate a simulation on the server">Simulate</a>
+                <a class="button alert" href="javascript:void(0);"
+                   onclick="document.getElementById('simulator').click()"
+                   data-step="4"
+                   data-intro="Use this button to initiate a simulation on the server">Simulate</a>
                 <input id="simulator" type="submit" value="Simulate" style="display: none;"/>
             </form>
         </ul>
     </section>
-
-
 </nav>
 
 
@@ -74,23 +75,36 @@
 
 <div class="tabsdiv">
     <div class="tabs__topbar">
-        <button id="home-button" class="tabs__button" data-for-tab="0" style="display: none;">Home</button>
+        <button id="home-button" class="tabs__button" data-for-tab="0" style="display: none;">Home
+        </button>
         <button class="tabs__button" data-for-tab="1"
                 data-step="5"
-                data-intro="Use this tab to configure the simulation parameters">Simulation</button>
+                data-intro="Use this tab to configure the simulation parameters">Simulation
+        </button>
         <button class="tabs__button" data-for-tab="2"
                 data-step="6"
-                data-intro="Use this tab to configure the parameters related to the input">Inputs</button>
+                data-intro="Use this tab to configure the parameters related to the input">Inputs
+        </button>
         <button class="tabs__button" data-for-tab="3"
                 data-step="7"
-                data-intro="Use this tab to configure the parameters related to neuron groups in the simulation">NeuronGroups</button>
+                data-intro="Use this tab to configure the parameters related to neuron groups in the simulation">
+            NeuronGroups
+        </button>
         <button class="tabs__button" data-for-tab="4"
                 data-step="8"
-                data-intro="Use this tab to configure the parameters for synaptic connections">Connections</button>
-        <button class="tabs__button " data-for-tab="5"
+                data-intro="Use this tab to configure the parameters for synaptic connections">Connections
+        </button>
+        <button class="tabs__button" data-for-tab="5"
                 data-step="9"
-                data-intro="Use this tab to configure the physiological parameters of the network ">Physiology</button>
+                data-intro="Use this tab to configure the physiological parameters of the network ">Physiology
+        </button>
+        <button class="tabs__button" data-for-tab="6" style="position: absolute; right: 0px;"
+                data-step="10"
+                data-intro="Description of configurations available for simulating sample networks.">Examples
+        </button>
     </div>
+
+
     <div class="main_tabs">
         <!--  ##################################################      -->
         <!--        This is the content of the home tab               -->
@@ -99,36 +113,47 @@
             <div id='home' style="height: 100vh;">
                 <h3> CxSystem Simulator</h3>
 
-                <div style="border: solid #e1e1e1 1px; padding: 5px; width: 60%;">
-                <p>
-                    CxSystem is a cerebral cortex simulation framework, which operates on personal computers.
-                    We have tested the simulation software with a simplified version of a comprehensive cortical microcircuit model [1],
-                    which is available as configuration file.  The CxSystem aims at easy testing and buildup of diverse
-                    models at single cell resolution. Implemented on the top of the Python-based Brian2 simulator, CxSystem
-                    supports the main goal of Brian, i.e. minimizing development time, by providing the user with a simplified interface.
-                    The preliminary version of this software has been developed at Aalto University 2012-2015 [2], and the
-                    full version at the University of Helsinki 2013-2017. The software is distributed under the terms of
-                    the GNU General Public License, Copyright 2017 Vafa Andalibi, Henri Hokkanen and Simo Vanni.
-                    To access the documentation of the CxSystem, please check out the readthedocs page of the project.
-                </p>
-                <br>
-                <br>
-                <br>
-                <hr>
-                <p style="font-size: 8pt;">
-                    [1] Markram, H., Muller, E., Ramaswamy, S., Reimann, M. W., Abdellah, M., Sanchez, C. A., … Schürmann, F. (2015). Reconstruction and Simulation of Neocortical Microcircuitry. Cell, 163(2), 456–492. http://doi.org/10.1016/j.cell.2015.09.029
+                <div style="border: solid #e1e1e1 1px; padding: 5px; width: 70%;">
+                    <p>
+                        CxSystem is a cerebral cortex simulation framework, which operates on personal computers.
+                        We have tested the simulation software with a simplified version of a comprehensive cortical
+                        microcircuit model [1],
+                        which is available as configuration file. The CxSystem aims at easy testing and buildup of
+                        diverse
+                        models at single cell resolution. Implemented on the top of the Python-based Brian2 simulator,
+                        CxSystem
+                        supports the main goal of Brian, i.e. minimizing development time, by providing the user with a
+                        simplified interface.
+                        The preliminary version of this software has been developed at Aalto University 2012-2015 [2],
+                        and the
+                        full version at the University of Helsinki 2013-2017. The software is distributed under the
+                        terms of
+                        the GNU General Public License, Copyright 2017 Vafa Andalibi, Henri Hokkanen and Simo Vanni.
+                        To access the documentation of the CxSystem, please check out the readthedocs page of the
+                        project.
+                    </p>
                     <br>
-                    [2]Heikkinen, H., Sharifian, F., Vigário, R., & Vanni, S. (2015). Feedback to distal dendrites links fMRI signals to neural receptive fields in a spiking network model of the visual cortex. Journal of Neurophysiology, 114(1), 57–69. http://doi.org/10.1152/jn.00169.2015
-                </p>
+                    <br>
+                    <br>
+                    <hr>
+                    <p style="font-size: 8pt;">
+                        [1] Markram, H., Muller, E., Ramaswamy, S., Reimann, M. W., Abdellah, M., Sanchez, C. A., …
+                        Schürmann, F. (2015). Reconstruction and Simulation of Neocortical Microcircuitry. Cell, 163(2),
+                        456–492. http://doi.org/10.1016/j.cell.2015.09.029
+                        <br>
+                        [2]Heikkinen, H., Sharifian, F., Vigário, R., & Vanni, S. (2015). Feedback to distal dendrites
+                        links fMRI signals to neural receptive fields in a spiking network model of the visual cortex.
+                        Journal of Neurophysiology, 114(1), 57–69. http://doi.org/10.1152/jn.00169.2015
+                    </p>
                 </div>
 
                 <br>
                 <h3> Examples </h3>
-                <div style="border: solid #e1e1e1 1px; padding: 5px;width: 60%;">
-                <p>
-                The following examples are currently available for simulation:
+                <div style="border: solid #e1e1e1 1px; padding: 5px;width: 70%;">
+                    <p>
+                        The following examples are currently available for simulation:
 
-                </p>
+                    </p>
                 </div>
 
             </div>
@@ -138,9 +163,9 @@
             <div id='params_holder' class='medium-12 columns'></div>
         </div>
         <div class="tabs__content" data-tab="2">
-<!--            <div class="medium-12 columns">-->
-<!--                <span id='valid_indicator' style="margin-left: -15px; margin-down 5px; "> hi </span>-->
-<!--            </div>-->
+            <!--            <div class="medium-12 columns">-->
+            <!--                <span id='valid_indicator' style="margin-left: -15px; margin-down 5px; "> hi </span>-->
+            <!--            </div>-->
             <div id='inputs_holder'></div>
         </div>
         <div class="tabs__content" data-tab="3">
@@ -156,11 +181,43 @@
         <div class="tabs__content" data-tab="5">
             <div id='physio_holder'></div>
         </div>
+
+        <div class="tabs__content" data-tab="6">
+            <div id='examples' style="height: 100vh;">
+                <h3>Examples</h3>
+                <div style="border: solid #e1e1e1 1px; padding: 5px; width: 70%;">
+                    <p>
+                        We have prepared several configurations files for sample networks of different examples:
+                    <h4>pytest network</h4>
+                    <p>
+                        <a href="#" onclick="load_example('pytest')">Click here</a> to load the configuration for the pytest example which is basically a generic sample network.
+                    </p>
+
+                    <h4>COBAHH</h4>
+                    <p>
+                        <a href="#" onclick="">Click here</a> to load the configuration for COBAHH example.
+                    </p>
+
+
+                    <h4>CUBA</h4>
+                    <p>
+                        <a href="#" onclick="">Click here</a> to load the configuration for CUBA example.
+                    </p>
+
+                    <h4>Simplified Markram Model</h4>
+                    <p>
+                        <a href="#" onclick="">Click here</a> to load the configuration for simplified markram model
+                        example.
+                    </p>
+                    </p>
+                </div>
+
+            </div>
+        </div>
     </div>
 </div>
 
 <!--    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>-->
-
 
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/split.js/1.5.11/split.min.js"></script> -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
