minor change in html

--- a/CxGUI/CxFront/editor/templates/editor/index.html
+++ b/CxGUI/CxFront/editor/templates/editor/index.html
@@ -184,6 +184,7 @@
 
         <div class="tabs__content" data-tab="6">
             <div id='examples' style="height: 100vh;">
+                <!-- Examples are loaded here -->
                 <h3>Examples</h3>
                 <div style="border: solid #e1e1e1 1px; padding: 5px; width: 70%;">
                     <p>
