Cython device added, python now works by default on numpy

--- a/CxGUI/CxFront/editor/templates/editor/index.html
+++ b/CxGUI/CxFront/editor/templates/editor/index.html
@@ -189,7 +189,7 @@
                 <div style="border: solid #e1e1e1 1px; padding: 5px; width: 70%;">
                     <p>
                         We have prepared several configurations files for sample networks of different examples:
-                    <h4>pytest network</h4>
+                    <h4>Pytest</h4>
                     <p>
                         <a href="#" onclick="load_example('pytest')">Click here</a> to load the configuration for the pytest example which is basically a generic sample network.
                     </p>
