Added simplified markram model configs to examples

--- a/CxGUI/CxFront/editor/templates/editor/index.html
+++ b/CxGUI/CxFront/editor/templates/editor/index.html
@@ -205,10 +205,26 @@
                         <a href="#" onclick="">Click here</a> to load the configuration for CUBA example.
                     </p>
 
-                    <h4>Simplified Markram Model</h4>
+                    <h4>Simplified Markram Model (step 2)</h4>
                     <p>
-                        <a href="#" onclick="">Click here</a> to load the configuration for simplified markram model
-                        example.
+                        This model is a simplification of the Markram et al. (2015) model of the rat somatosensory
+                        cortex containing ~31 000 neurons divided into 17 neuron groups.
+                        Details of the simplification are described in
+                        <a href="https://www.mitpressjournals.org/doi/10.1162/neco_a_01188" target="_blank">the article</a>.
+                        Running this model should take ~6 minutes per 1 second of simulation time (device=Python).
+                    </p>
+                    <p>
+                        <a href="#" onclick="load_example('markram_step2')">Click here</a> to load the configuration of the step 2 simplification.
+                    </p>
+                    <h4>Simplified Markram Model (step 1)</h4>
+                    <p>
+                        This model contains all the 55 neuron groups of the Markram et al. (2015) rat somatosensory
+                        cortex model. The neuron dynamics have been reduced to exponential integrate-and-fire.
+                        Running this model should take ~17 minutes per 1 second of simulation time (device=Python).
+                    </p>
+                    <p>
+                        <a href="#" onclick="load_example('markram_step1')">Click here</a> to load the configuration of the step 1 simplification.
+                        Your browser might become unresponsive while the configuration is being loaded. Be patient.
                     </p>
                     </p>
                 </div>
