Added COBAEIF configs to examples. Won't run thru GUI however - Django issue?

--- a/CxGUI/CxFront/editor/templates/editor/index.html
+++ b/CxGUI/CxFront/editor/templates/editor/index.html
@@ -194,16 +194,11 @@
                         <a href="#" onclick="load_example('pytest')">Click here</a> to load the configuration for the pytest example which is basically a generic sample network.
                     </p>
 
-                    <h4>COBAHH</h4>
+                    <h4>COBA-EIF</h4>
                     <p>
-                        <a href="#" onclick="">Click here</a> to load the configuration for COBAHH example.
+                        <a href="#" onclick="load_example('cobaeif')">Click here</a> to load the configuration for the COBA-EIF example.
                     </p>
 
-
-                    <h4>CUBA</h4>
-                    <p>
-                        <a href="#" onclick="">Click here</a> to load the configuration for CUBA example.
-                    </p>
 
                     <h4>Simplified Markram Model (step 2)</h4>
                     <p>
