--- a/cxsystem2/gui/cx_gui/editor/templates/editor/index.html
+++ b/cxsystem2/gui/cx_gui/editor/templates/editor/index.html
@@ -247,7 +247,8 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/@json-editor/json-editor@latest/dist/jsoneditor.min.js"></script>
-<script src="http://malsup.github.com/jquery.form.js"></script>
+<!--<script src="https://malsup.github.com/jquery.form.js"></script>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.js"></script>
 
 
 </body>
