--- a/cxsystem2/gui/cx_gui/editor/templates/editor/index.html
+++ b/cxsystem2/gui/cx_gui/editor/templates/editor/index.html
@@ -100,6 +100,14 @@
         </ul>
 
         <ul class="right">
+            <form id='simstatus_form' action='simstatus'>
+                {% csrf_token %}
+                <a class="button secondary" href="javascript:void(0);" onclick="document.getElementById('simstatus').click()">Simulation Status</a>
+                <input id="simstatus" type="submit" value="simstatus" style="display: none;"/>
+            </form>
+        </ul>
+
+        <ul class="right">
             <li class="active" ><a id="welcome"  href="javascript:void(0);" ></a></li>
         </ul>
         {% endif %}
