--- a/cxsystem2/gui/cx_gui/static/css/style.css
+++ b/cxsystem2/gui/cx_gui/static/css/style.css
@@ -158,3 +158,9 @@ button.tabs__button--active{
     margin-right: 20px;
     background: #333 !important;
 }
+
+.swal2-content {
+    font-size: 1em !important;
+    border-style: solid;
+    padding : 10px !important;
+}
