--- a/cxsystem2/gui/cx_gui/editor/templates/editor/index.html
+++ b/cxsystem2/gui/cx_gui/editor/templates/editor/index.html
@@ -156,6 +156,10 @@
                 data-step="9"
                 data-intro="Use this tab to configure the physiological parameters of the network ">Physiology
         </button>
+        <button class="tabs__button" data-for-tab="5"
+                data-step="9"
+                data-intro="Use this tab to visualize the simulation results on the server ">Rasterplot
+        </button>
         <button class="tabs__button" data-for-tab="6" style="position: absolute; right: 0px;"
                 data-step="10"
                 data-intro="Description of configurations available for simulating sample networks.">Examples
