bug fix in rasterplot_to_pdf (backend), bug fix in index for secure template

--- a/cxsystem2/gui/cx_gui/editor/templates/editor/index.html
+++ b/cxsystem2/gui/cx_gui/editor/templates/editor/index.html
@@ -92,10 +92,11 @@
             </form>
         </ul>
 
-
+        {% if is_secure %}
         <ul class="right">
             <li class="active"><a id="welcome" href="javascript:void(0);"></a></li>
         </ul>
+        {% endif %}
 
     </section>
 </nav>
